--- a/src/components/BeforeLogin/Home/About.css
+++ b/src/components/BeforeLogin/Home/About.css
@@ -30,7 +30,7 @@
     height:auto;
     width: 100%;
     padding-inline: 65px;
-    background:green;
+    /* background:green; */
     justify-content: space-between;
     display: flex;
     gap: 20px;
