--- a/src/components/BeforeLogin/Header/Header.css
+++ b/src/components/BeforeLogin/Header/Header.css
@@ -37,14 +37,16 @@
 .mainNav{
     height: 100%;
     width: 65%;
-    /* background: blanchedalmond; */
+    
 
     & ul{
         height: 100%;
         width: 100%;
+        background: #F8FFFC;
         display: flex;
+        flex-direction: row;
+        padding-top: 10px;
         align-items: center;
-        justify-content: center;
         gap: 20px;
 
         & .NavActive{
@@ -75,6 +77,7 @@
     gap: 20px;
     justify-content: flex-end;
     align-items: center;
+    /* background: red; */
 
     
     & .Account{
@@ -109,8 +112,8 @@
     }
     .transparent{
         background: transparent;
-        border: 0.93px solid #3FB480        ;
-        color: #3FB480        ;
+        border: 0.93px solid #3FB480;
+        color: #3FB480;
     }
     .transparent:hover{
         /* cursor: pointer; */
@@ -158,5 +161,42 @@
 @media screen and (min-width:768px) {
     .Logobox{
         width: 10%;
+    }
+}
+@media screen and (min-width: 5184px) {
+    .Header{
+        height: 15vh;
+        /* background: gray; */
+    }
+    .Logobox{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 10px;
+        & img{
+            width: 100%;
+        }
+    }
+    .mainNav{
+        & ul{
+            gap: 70px;
+            & .NavActive{
+                font-size: 100px;
+            }
+            & .NavNotActive{
+                font-size: 90px;
+            }
+        }
+    }
+    .Auth{
+        padding-top: 30px;
+        padding-bottom: 30px;
+        gap: 40px;
+        & button{
+            height: 60%;
+            width: 46%;
+            border-radius: 40px;
+            font-size: 90px;
+        }
     }
 }
