--- a/src/components/BeforeLogin/Home/Home.css
+++ b/src/components/BeforeLogin/Home/Home.css
@@ -2,9 +2,10 @@
     height: auto;
     width: 100%;
     /* background: #000; */
+    overflow: hidden;
 }
 .HomeHero{
-    height: 570px;
+    height: 90vh;
     width: 100%;
     background: #F7F7F7;
     display: flex;
@@ -14,7 +15,7 @@
     justify-content: space-between;
 }
 .HeroImageText{
-    height: 380px;
+    height: 100%;
     width: 40%;
     /* background: red; */
     display: flex;
@@ -32,8 +33,8 @@
         color: #222222;
     }
     & button{
-        height: 55px;
-        width: 413px;
+        height: 13%;
+        width: 100%;
         border: none;
         color: white;
         border-radius: 6.92px;
@@ -48,27 +49,30 @@
 
 }
 .HeroImage{
-    height: 550px;
-    width: 50%;
+    height: 100%;
+    width: max-content;
     background: rgb(158, 158, 171);
 
     & img{
         height: 100%;
         width: 100%;
+        border: none;
     }
 }
 .QualitiesWeOffer{
     height: 38vh;
     width: 100%;
-    padding: 65px;
+    padding-left: 65px;;
+    padding-right: 65px;;
+    /* background: red; */
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 .QualityCard{
-    height: 176px;
-    width: 357px;
+    height: 80%;
+    width: 32%;
     background: #F8FFFC;
     border-radius: 20px;
     display: flex;
@@ -97,21 +101,23 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    /* background: rebeccapurple; */
 }
 .QualityHeader{
-    height: 23%;
+    height: 25%;
+    /* background: yellow; */
     width: 100%;
     & h5{
-        font-size: 19.55px;
+        font-size: 1.6rem;
         font-family: var(--generalFontFamily--);
     }
 }
 .QualityTextArea{
-    height: 76%;
+    height: 70%;
     width: 100%;
 
     & p{
-        font-size: 17px;
+        font-size: 1.02rem;
         font-family: var(--generalFontFamily--);
     }
 }
