--- a/src/components/TherapistDashboard/TherapistDashboard.css
+++ b/src/components/TherapistDashboard/TherapistDashboard.css
@@ -1,5 +1,13 @@
 .TherapistDashBoard{
     height: 100vh;
-    width: 100%;
-    background: red;
+    width: 73%;
+    background: rgb(176, 228, 221);
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .TherapistDashBoard{
+        width: 100%;
+    }
 }
