--- a/src/components/TherapistDashboard/DashboardMobileNav.css
+++ b/src/components/TherapistDashboard/DashboardMobileNav.css
@@ -18,11 +18,44 @@
             background: white;
             display: flex;
             flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            padding: 0;
+            /* gap: 30px; */
             justify-content: space-around;
 
-            li {
+            .MobileNavNotActive{
+                list-style: none;
+                font-size: 14px;
+                font-family: var(--generalFontFamily--);
+                /* background: bisque; */
                 display: flex;
-                flex-direction: column;         
+                flex-direction: column;
+                align-items: center;
+                gap: 5px;
+                transform: scale(1);
+                color: black;
+                text-decoration: none;
+                transition: all 350ms ease;
+            }
+            .MobileNavActive{
+                list-style: none;
+                font-size: 14px;
+                font-family: var(--generalFontFamily--);
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 5px;
+                transform: scale(1.01);
+                color: black;
+                font-weight: 600;
+                text-decoration: none;
+                transition: all 350ms ease;
+            }
+            & .NavNotActive:hover{
+                cursor: pointer;
+                transform: scale(1.01);
+                transition: all 350ms ease;
             }
         }
     }
@@ -30,19 +63,6 @@
 @media screen and (max-width:768px) {
     .DashboardMobileNav{
         display: flex;
-
-        nav{
-            ul{
-                justify-content: space-around;
-                align-items: center;
-                padding-left: 0;
-                gap: 20px;
-
-                li{
-                    font-size: 14px;
-                }
-            }
-        }
     }
 
 }
