--- a/src/components/TherapistDashboard/DashboardPages/TherapistHome.css
+++ b/src/components/TherapistDashboard/DashboardPages/TherapistHome.css
@@ -1,5 +1,5 @@
 .TherapistHome{
-    height: 100%;
+    height: 98vh;
     width: 100%;
     /* background: #000; */
     display: flex;
@@ -201,7 +201,7 @@
     }
 }
 
-  @media screen and (max-width:430px) {
+  @media screen and (max-width:768px) {
     .TherapistHome{
         height: max-content;
     }
@@ -225,7 +225,6 @@
         height: max-content;
     }
     .UpcomingHeader{
-        /* background: #000; */
         height: 8vh;
 
         & h2{
@@ -233,7 +232,6 @@
         }
     }
     .UpcomingDatesHolder{
-        /* background: red; */
         height: max-content;
         min-height: 14vh;
         flex-wrap: wrap;
@@ -244,10 +242,16 @@
         width: 40%;
     }
     .ScheduleList{
-        /* background: red; */
         margin-bottom: 50px;
     }
-    table{
-        
+    .ScheduleListHeader{
+        height: 8vh;
+        display: flex;
+        align-items: flex-end;
+
+        & h2{
+            font-size: 26px;
+        }
     }
+
   }
