--- a/src/components/TherapistDashboard/DashboardPages/TherapistsAppointment.css
+++ b/src/components/TherapistDashboard/DashboardPages/TherapistsAppointment.css
@@ -1,5 +1,5 @@
 .TherapistAppointments{
-    height: 100vh;
+    height: 98vh;
     width: 100%;
     /* background: red; */
     padding-top: 10px;
@@ -88,7 +88,7 @@
     
         th, td {
         border: 1px solid #000;
-        padding: 12px;
+        padding:12px;
         }
         thead{
             position: sticky;
@@ -118,6 +118,41 @@
     padding-right: 10px;
     display: flex;
     align-items: center;
-    background: rgb(119, 187, 119);
+    background: rgb(81, 190, 81);
     border-radius: 10px;
+}
+@media screen and (max-width:768px) {
+    .SearchArea{
+        width: 80%;
+    }
+    .AppointmentMainArea{
+        /* background: #000; */
+        width: 100%;
+        th, td{
+            padding: 4px;
+            padding-top: 6px;
+            padding-bottom: 6px;
+        }
+    }
+    .TherapistAppointments{
+        margin-left: 5px;
+        margin-bottom: 15px;
+    }
+    .PictureCircle{
+        height: 55px;
+        width: 55px;
+        border-radius: 50%;
+    }
+    .HoldProfileName{
+        & h2{
+            font-size: 16px;
+        }
+    }
+}
+@media screen and (max-width: 430px) {
+    .AppointmentMainArea{
+        table{
+            font-size: 13px;
+        }
+    }
 }
