--- a/src/components/BeforeLogin/Home/Home.css
+++ b/src/components/BeforeLogin/Home/Home.css
@@ -15,36 +15,46 @@
     justify-content: space-between;
 }
 .HeroImageText{
-    height: 100%;
+    height: max-content;
     width: 40%;
-    /* background: red; */
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 20px;
 
-    & h1{
-        font-family: var(--generalFontFamily--);
-        font-size: 47px;
-        color: #222222;
-    }
-    & p{
-        font-family: var(--generalFontFamily--);
-        font-size: 24px;
-        color: #222222;
-    }
-    & button{
-        height: 13%;
+    .HeroText{
         width: 100%;
-        border: none;
-        color: white;
-        border-radius: 6.92px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 17px;
-        background: #3FB480;
-        color: #E6F6F4;
-        cursor: pointer;
-        transform: scale(1);
-        transition: all 350ms ease;
+
+        & h1{
+            font-family: var(--generalFontFamily--);
+            font-size: 47px;
+            color: #222222;
+        }
+        & p{
+            font-family: var(--generalFontFamily--);
+            font-size: 24px;
+            color: #222222;
+        }
+    }
+    .HeroButton{
+        height: 15vh;
+        width: 100%;
+
+
+
+        & button{
+            height: 75%;
+            width: 100%;
+            border: none;
+            color: white;
+            border-radius: 6.92px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 17px;
+            background: #3FB480;
+            color: #E6F6F4;
+            cursor: pointer;
+            transform: scale(1);
+            transition: all 350ms ease;
+        }
     }
 
 }
@@ -124,7 +134,6 @@
 .TherapistAccess{
     height: 65vh;
     width: 100%;
-    /* background: green; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -139,17 +148,24 @@
     background-size: cover;
     border-top-left-radius: 40px;
     border-bottom-right-radius: 40px;
+
+    @media screen and (min-width: 769px) and (max-width:1030px) {
+        width: 46%;
+    }
 }
 .TherapistAccessWriteup{
     height: 90%;
-    width: 54%;
+    width: 52%;
     /* background: #000; */
     padding-top: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
-
+    @media screen and (min-width: 769px) and (max-width:1080px) {
+    
+        gap: 10px;
+    }
 }
 .TherapistAccessMainWriteUp{
     height: 55%;
@@ -165,6 +181,15 @@
         font-family: var(--generalFontFamily--);
         font-size: 20px;
         color: #545456;
+    }
+    @media screen and (min-width: 769px) and (max-width:1080px) {
+        height: max-content;
+        & h4{
+            font-size: 32px;
+        }
+        & p{
+            font-size: 18px;
+        }
     }
 }
 .JoinUsButton{
@@ -185,6 +210,9 @@
         cursor: pointer;
         transform: scale(1);
         transition: all 350ms ease;
+    }
+    @media screen and (min-width: 769px) and (max-width:1030px) {
+        height: 30%;
     }
 }
 .ValuesinAction{
@@ -348,6 +376,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 .OurClientsHeader{
     height: 20%;
@@ -368,10 +397,11 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
 }
 .OurClientsCard{
     height: 200px;
-    width: 350px;
+    width: 32%;
     background: #F8FFFC;
     border-radius: 20px;
     display: flex;
@@ -391,7 +421,6 @@
 .MainImage{
     height: 100%;
     width: 25%;
-    background: navy;
     border-radius: 50%;
 
     & img{
@@ -433,12 +462,14 @@
         flex-direction: column;
         height: max-content;
         gap: 15px;
+        padding: 10px;
     }
     .QualityCard{
         height: 165px;
+        width: 100%;
     }
     .TherapistAccess{
-        height: 85vh;
+        height: 100vh;
         flex-direction: column;
         padding-left: 10px;
         padding-right: 10px;
@@ -448,9 +479,8 @@
         width: 100%;
     }
     .TherapistAccessWriteup{
-        height: 47%; 
+        height: max-content; 
         width: 100%;
-        /* background: #000;  */
         gap: 20px;
         
 
@@ -482,16 +512,30 @@
     .HeroImageText{
         width: 100%;
         height: max-content;
+        /* background: #000; */
         padding-left: 10px;
 
-        & h1{
-            font-size: 36px;
+        .HeroText{
+            display: flex;
+            height: max-content;
+            flex-direction: column;
+            gap: 10px;
+
+            & h1{
+                font-size: 36px;
+            }
+            & p{
+                font-size: 22px;
+            }
         }
-        & p{
-            font-size: 24px;
-        }
-        & button{
-            width: 60%;
+        .HeroButton{
+            height: 10vh;
+            width: 100%;
+            /* background: red; */
+
+            & button{
+                width: 80%;
+            }
         }
     }
     .HeroImage{
@@ -499,9 +543,8 @@
         height: 370px;
     }
     .ValuesinAction{
-        height: 30vh;
+        height: max-content;
         padding-bottom: 20px;
-        /* background: #000; */
         justify-content: center;
         margin-top: 20px;
         margin-bottom: 20px;
@@ -525,9 +568,10 @@
         }
     }
     .YourConcerns{
-        padding-left: 0;
-        padding-right: 0;
+        padding-left: 10px;
+        padding-right: 10px;
         margin-bottom: 20px;
+        height: max-content;
     }
     .YourConcernsheader{
         height: 10%;
@@ -548,33 +592,33 @@
     .YourComcernWriteUp{
         width: 100%;
         height: 53%;
-        padding-left: 4px;
+        padding-left: 10px;
         padding-right: 4px;
         margin-bottom: 20px;
 
         & p{
-            font-size: 17.26px;
+            font-size: 18px;
         }
     }
     .YourConcernImage{
         width: 100%;
-        height: 45%;
+        height: 70vh;
         /* background: #000; */
     }
     .MeetOurTherapists{
-        /* background: #000; */
         padding: 0;
     }
     .Meet{
         height: 50px;
-        /* background: red; */
         width: 100%;
     }
     .OurClients{
         padding: 0;
         height: max-content;
+        width: 100;
         margin-top: 10px;
         gap: 15px;
+        padding: 0;
     }
     .OurClientsHeader{
         & h3{
@@ -583,8 +627,93 @@
     }
     .OurClientsCardBox{
         height: max-content;
+        width: 100%;
         flex-direction: column;
         gap: 10px;
         margin-bottom:10px;
+
+    }
+    .OurClientsCard{
+        width: 90%;
+        height: 220px;
+    }
+}
+@media screen and (min-width: 460px) and (max-width:768px) {
+    .HeroImageText{
+        padding-right: 40px;
+        .HeroText{
+            padding: 30px;
+        }
+        .HeroButton{
+            button{
+                width: 60%;
+            }
+        }
+    }
+    .TherapistAccess{
+        height: max-content;
+    }
+    .TherapistAccessPicture{
+        height: 300px;
+    }
+    .MainImage{
+        height: 90px;
+        width: 90px;
+    }
+}
+@media screen and (min-width: 560px) and (max-width:768px) {
+    .TherapistAccessPicture{
+        height: 400px;
+    }
+}
+@media screen and (min-width: 769px) and (max-width:1035px) {
+    .HeroImageText{
+        .HeroText{
+            & h1{
+                font-size: 36px;
+            }
+            & p{
+                font-size: 20px;
+            }
+        }
+        .HeroButton{
+            height: 12vh;
+        }
+    }
+    .QualitiesWeOffer{
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    .QualityCard{
+        height: 85%;
+    }
+    .ValuesinAction{
+        margin-bottom: 20px;
+    }
+    .YourConcernImage{
+        width: 45%;
+        height: 100%;
+    }
+    .YourComcernWriteUp{
+        & p{
+            font-size: 17px;
+        }
+    }
+    .OurClients{
+        padding: 0;
+        
+    }
+    .OurClientsCardBox{
+        gap: 10px;
+    }
+.clientReview{
+    & p{
+        font-size: 14px;
+    }
+}
+}
+@media screen and (min-width: 570px) and (max-width:768px) {
+    .YourConcernImage{
+        height: 120vh;
     }
 }
