--- a/src/components/Auth/Login.css
+++ b/src/components/Auth/Login.css
@@ -1,39 +1,41 @@
 .login{
     width: 100%;
     height:100vh;
+    max-height: 100vh;
     background: #C8E7D9;
     display: flex;
 }
 
 .loginLogoBox{
-    width: 38%;
+    width: 30%;
     height: 100%;
-    padding-top: 50px;
-    padding-left:200px;
+    padding-top: 5px;
+    /* padding-left:200px; */
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    /* gap: 15px; */
+    align-items: center;
 
     & .loginLogo{
-        width: 170px;
-        height:170px;
+        width: 250px;
+        height: 250px;
     }
     
     & h4{
         font-family: var(--generalFontFamily--);
-        font-size: 22px;
-        margin-left: 50px;
+        font-size: 50px;
+        /* margin-left: 50px; */
 
     }
 }
-.loginLogo img{
+.loginLogoBox img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
 .loginInformation{
-    width: 62%;
+    width: 70%;
     height: 100%;
     background: #E6F6F4;
     border-bottom-left-radius: 100px;
@@ -46,9 +48,9 @@
         flex-direction: column;
         gap: 17px;
 
-        & .h1a{
+        & .h1{
             font-family: var(--generalFontFamily--);
-            font-size: 32px;
+            font-size: 30px;
         }
         & p{
             font-family: var(--generalFontFamily--);
@@ -57,7 +59,7 @@
     }
 
     & .loginInput{
-        width:500px;
+        width: 83%;
         height: 170px;
         margin-top: 50px;
         margin-bottom: 10px;
@@ -66,15 +68,15 @@
         gap: 40px;
 
         & .loginInputBox{
-            width: 500px;
+            width: 100%;
             height: 65px;
             border: 2px solid #908D8D;
             border-radius: 8px;
             display: flex;
-            gap:7px;
+            gap:10px;
 
             & input{
-                width:440px;
+                width:675px;
                 height: 61px;
                 padding-left: 10px;
                 font-size: 18px;
@@ -111,13 +113,13 @@
         font-size: 20px;
         font-weight: bold;
         border-radius: 5px;
-        margin-left: 370px;
+        margin-left: 68%;
     }
 
     & .bottomWriteUp{
         display: flex;
         gap: 10px;
-        padding-left: 100px;
+        padding-left: 16%;
     }
     & .bottomWriteUp1{
         font-family: var(--generalFontFamily--);
@@ -136,89 +138,152 @@
     }
 }
 
-@media screen and (max-width: 430px){
+
+
+
+@media screen and (width < 1024px){
     .login{
-        max-width: 430px;
-        /* background: blue; */
+        width: 100%;
+        height:100vh;
+        /* background: #C8E7D9; */
         display: flex;
-
+        flex-direction: column;
+        background: #E6F6F4;
+        padding-inline: 5%;
     }
+    
     .loginLogoBox{
-        display: none;
-    }
+        width: 100%;
+        height: auto;
+        padding-top: 7px;
+        /* padding-left:200px; */
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        align-items: center;
 
+    
+        & .loginLogo{
+            width: 150px;
+            height: 150px;
+        }
+        
+        & h4{
+            font-family: var(--generalFontFamily--);
+            font-size: 30px;
+            /* margin-left: 50px; */
+    
+        }
+    }
+    .loginLogoBox img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
     .loginInformation{
-        width: 430px;
+        width: auto;
+        height: 70%;
+        background: #E6F6F4;
         border-bottom-left-radius: 0px;
         border-top-left-radius: 0px;
-        /* background: red; */
-        padding-left: 10px;
-        padding-top: 200px;
-
+        padding-left: 0px;
+        padding-top: 4px;
+    
         & .topWriteUp{
             display: flex;
             flex-direction: column;
             gap: 17px;
-            /* margin-bottom: 10px; */
     
-            & .h1b{
-                font-family: var(--generalFontFamily--);
-                font-size: 32px;
-                margin-left: 160px;
-            }
-            & .h1a{
+            & .h1{
                 display: none;
             }
             & p{
-                display: none;
+                font-family: var(--generalFontFamily--);
+                font-size:18px;
             }
         }
-
+    
         & .loginInput{
-            gap: 20px;
-            margin-bottom: 5px;
-            /* background: red; */
-            height: 150px;
-            width: 410px;
-            margin-top: 30px;
-
+            width: 100%;
+            height: auto;
+            margin-top: 15px;
+            margin-bottom: 1px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+    
             & .loginInputBox{
-                width: 410px;
-
+                width: 100%;
+                height: 65px;
+                border: 2px solid #908D8D;
+                border-radius: 8px;
+                display: flex;
+                gap:10px;
+    
                 & input{
-                    width: 350px;
+                    width:675px;
+                    height: 61px;
+                    padding-left: 10px;
+                    font-size: 18px;
+                    background:none;
+                    border: none;
+                    outline: none;
+                }
+    
+                & .loginEye{
+                    width:25px;
+                    height: 61px;
+                    font-size: 25px;
+                    display: flex;
+                    align-items: center;
                 }
             }
-          
         }
+    
         & .centerWriteUp{
             font-family: var(--generalFontFamily--);
-            font-size: 19px;
+            font-size: 18px;
             font-weight: bold;
             color: #3FB480;
-            padding-left: 252px;
         }
-
+    
         & button{
-            margin-left: 0px;
-            margin-top: 20px;
-            width: 410px;
-            margin-top: 30px;
+            width:100%;
+            height: 60px;
+            border: none;
+            background: #3FB480;
+            color: #FFFFFF;
+            margin-top: 15px;
+            margin-bottom: 40px;
+            font-family: var(--generalFontFamily--);
             font-size: 20px;
+            font-weight: bold;
+            border-radius: 5px;
+            margin-left: 0px;
         }
-
+    
         & .bottomWriteUp{
             display: flex;
             gap: 10px;
-            padding-left: 60px;
+            padding-left: 0px;
+            justify-content: center;
         }
-        
+        & .bottomWriteUp1{
+            font-family: var(--generalFontFamily--);
+            font-size: 18px;
+            font-weight: bold;
+        }
+        & .bottomWriteUp2{
+            font-family: var(--generalFontFamily--);
+            font-size: 18px;
+            font-weight: bold;
+            color: #3FB480;
+        }
+        & .bottomWriteUp2:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
     }
-  
-}
-
-@media screen and (min-width: 431px){
-& .h1b{
-    display: none;
-}
+    
 }
