--- a/src/components/Auth/Signup.css
+++ b/src/components/Auth/Signup.css
@@ -6,23 +6,23 @@
 }
 
 .signupLogoBox{
-    width: 38%;
+    width: 30%;
     height: 100%;
-    padding-top: 50px;
-    padding-left:180px;
+    padding-top: 5px;
+    /* padding-left:180px; */
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    /* gap: 25px; */
+    align-items: center;
 
     & .signupLogo{
-        width: 170px;
-        height:170px;
-        margin-left: 20px;
+        width: 250px;
+        height:250px;
     }
     
     & h4{
         font-family: var(--generalFontFamily--);
-        font-size: 22px;
+        font-size: 30px;
         /* margin-left: 50px; */
     }
 }
@@ -33,7 +33,7 @@
 }
 
 .signupInformation{
-    width: 62%;
+    width: 70%;
     height: 100%;
     background: #E6F6F4;
     border-bottom-left-radius: 100px;
@@ -93,7 +93,7 @@
         gap: 20px;
 
         & .signupInputBox{
-            width: 500px;
+            width: 83%;
             height: 65px;
             border: 2px solid #908D8D;
             border-radius: 8px;
@@ -101,7 +101,7 @@
             gap:7px;
 
             & .signupInput{
-                width:440px;
+                width:90%;
                 height: 61px;
                 padding-left: 10px;
                 font-size: 18px;
@@ -127,7 +127,162 @@
             font-size: 20px;
             font-weight: bold;
             border-radius: 5px;
-            margin-left: 370px;
+            margin-left: 68%;
         }
     }
+}
+
+
+
+
+
+
+@media screen and (width < 1024px){
+    .signup{
+        width: 100%;
+        height:100vh;
+        background: #E6F6F4;
+        display: flex;
+        flex-direction: column;
+        padding-inline: 5%;
+        position: relative;
+    }
+    
+    .signupLogoBox{
+        width: 100%;
+        height: auto;
+        padding-top: 40px;
+        /* padding-left:180px; */
+        display: flex;
+        flex-direction: column;
+        /* gap: 25px; */
+        align-items: center;
+    
+        & .signupLogo{
+            width: 150px;
+            height:150px;
+            margin-bottom: 5px;
+        }
+        
+        & h4{
+            font-family: var(--generalFontFamily--);
+            font-size: 23px;
+            margin-bottom: 15px;
+        }
+    }
+    .signupLogo img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .signupInformation{
+        width: 100%;
+        height: auto;
+        background: #E6F6F4;
+        border-bottom-left-radius: 0px;
+        border-top-left-radius: 0px;
+        padding-left: 0px;
+        display: flex;
+        flex-direction: column;
+        padding-top: 0px;
+        margin-top: 0px;
+    
+        & .signupWrtiteup{
+            display: flex;
+            gap: 10px;
+            /* background: red; */
+            margin-top: 0px;
+            margin-bottom:55px;
+            /* margin-left:450px; */
+            display: flex;
+            justify-content: flex-start;
+            padding-right: 0px;
+            padding-top: 0px;
+    
+            & p{
+                color: wheat;
+            }
+        }
+    
+        & .TherapistSignupWrtiteup{
+            display: flex;
+            gap: 10px;
+            /* background: red; */
+            margin-top: 0px;
+            margin-bottom:0px;
+            /* margin-left:450px; */
+            display: flex;
+            justify-content: flex-end;
+            padding-right: 20px;
+    
+            & p{
+                position: absolute;
+                top: 10px;
+                right: 5%;
+                padding-bottom:0px;
+                margin-bottom: 0px;
+            }
+        }
+        & .signupP{
+            font-family: var(--generalFontFamily--);
+            font-size: 18px;
+        }
+        .loginfromsignup{
+            font-family: var(--generalFontFamily--);
+            font-size: 18px;
+        }
+        .loginfromsignup:hover{
+            text-decoration: underline;
+            cursor: pointer;
+        }
+        & .signupBox{
+            display: flex;
+            flex-direction: column;
+            /* background: #000; */
+            gap: 10px;
+    
+            & .signupInputBox{
+                width: 100%;
+                height: 65px;
+                border: 2px solid #908D8D;
+                border-radius: 8px;
+                display: flex;
+                gap:7px;
+    
+                & .signupInput{
+                    width:100%;
+                    height: 61px;
+                    padding-left: 10px;
+                    font-size: 18px;
+                    background:none;
+                    border: none;
+                    outline: none;
+                }
+                & .signupEye{
+                    width:25px;
+                    height: 61px;
+                    font-size: 25px;
+                    display: flex;
+                    align-items: center;
+                }
+            }
+            & .signupButton{
+                width:100%;
+                height: 60px;
+                border: none;
+                background: #3FB480;
+                color: #FFFFFF;
+                font-family: var(--generalFontFamily--);
+                font-size: 20px;
+                font-weight: bold;
+                border-radius: 5px;
+                margin-left: 0px;
+                margin-top: 12px;
+                margin-bottom: 50px;
+            }
+        }
+    }
+    
+    
 }
