--- a/src/components/BeforeLogin/Home/About.css
+++ b/src/components/BeforeLogin/Home/About.css
@@ -29,16 +29,16 @@
 .aboutBrand{
     height:auto;
     width: 100%;
-    padding-inline: 65px;
+    padding-inline: 5%;
     /* background:green; */
     justify-content: space-between;
     display: flex;
-    gap: 20px;
+    gap: 7%;
     margin-bottom: 50px;
 
     & .aboutBrandImage{
-        height: 60vh;
-        width: 47%;
+        height: 45vh;
+        width: 50%;
         background: orange;
 
         & img{
@@ -62,7 +62,7 @@
     }
     & p{
         font-family: var(--generalFontFamily--);
-        font-size: 18px;
+        font-size: 16px;
     }
     }
     
@@ -71,13 +71,13 @@
 .aboutMission{
     height:max-content;
     width: 100%;
-    padding-inline: 65px;
+    padding-inline: 5%;
     display: flex;
-    gap: 20px;
+    gap: 7%;
     margin-bottom: 50px;
 
     & .aboutMissionText{
-        width: 60%;
+        width: 50%;
         display: flex;
         flex-direction: column;
         gap: 13px;
@@ -100,8 +100,8 @@
     }
 
     & .aboutMissionImage{
-        width: 40%;
-        /* height: 70vh; */
+        width: 45%;
+        /* height: 200px; */
         /* background: grey; */
     }
 }
@@ -109,9 +109,9 @@
 .aboutValue{
     height:max-content;
     width: 100%;
-    padding-inline: 65px;
+    padding-inline: 5%;
     display: flex;
-    gap: 20px;
+    gap: 7%;
     margin-bottom: 50px;
     justify-content: space-between;
 
@@ -138,7 +138,7 @@
     }
 
     & .aboutValueImage{
-        height: 50vh;
+        height: 35vh;
         width: 50%;
         /* background: green; */
 
@@ -159,20 +159,352 @@
 
 .aboutTeamImage{
     width: 100%;
-    height: 200px;
+    /* height: 200px; */
     /* background: yellow; */
-    padding-inline: 65px;
-    margin-bottom: 100px;
+    padding-inline: 5%;
+    margin-bottom: 15%;
     display: flex;
     justify-content: space-between;
     
     .aboutTeamImageContainer{
-        width: 160px;
-        height: 160px;
+        width: 280px;
+        height: 280px;
         /* background: blue; */
         border-radius: 50%;
+        
+    }
+    .aboutT{
+        font-size: 25px;
+        gap: 10px;
     }
 }
-@media screen and (max-width:430px) {
-   
+
+@media screen and (720px <= width < 1024px) {
+    .aboutBrand{
+        & .aboutBrandImage{
+            height: 51vh;
+        }
+        & .aboutBrandText{
+        & h4{
+            font-size: 26px;
+        }
+        & p{
+            font-size: 18px;
+        }
+        }   
+    }
+    
+    .aboutMission{
+        & .aboutMissionText{
+            & h4{
+                font-size: 26px;
+            }
+            & span{
+                & p{
+                    font-size: 18px;
+                }
+            }
+        }
+        & .aboutMissionImage{
+            width: 45%;
+        }
+    }
+    
+    .aboutValue{
+        & .aboutValueText{
+            & h4{
+                font-size: 26px;
+            }
+            & span{
+                & p{
+                    font-size: 18px;
+                }
+            }
+        }
+        & .aboutValueImage{
+            height: 37vh;
+        }
+    }
+    .aboutTeamImage{
+        .aboutTeamImageContainer{
+            width: 160px;
+            height: 160px;
+        }
+        .aboutT{
+            font-size: 20px;
+            gap: 5px;
+        }
+    }
+}
+
+@media screen and (1024px <= width < 1500px) {
+    .aboutBrand{
+        & .aboutBrandImage{
+            height: 72vh;
+        }
+        & .aboutBrandText{
+        & h4{
+            font-size: 30px;
+        }
+        & p{
+            font-size: 20px;
+        }
+        }   
+    }
+    
+    .aboutMission{
+        & .aboutMissionText{
+            & h4{
+                font-size: 30px;
+            }
+            & span{
+                & p{
+                    font-size: 20px;
+                }
+            }
+        }
+        & .aboutMissionImage{
+            width: 45%;
+        }
+    }
+    
+    .aboutValue{
+        & .aboutValueText{
+            & h4{
+                font-size: 30px;
+            }
+            & span{
+                & p{
+                    font-size: 20px;
+                }
+            }
+        }
+        & .aboutValueImage{
+            height: 50vh;
+        }
+    }
+    .aboutTeam{
+        font-size: 35px;
+    }
+    .aboutTeamImage{
+        & .aboutTeamImageContainer{
+            width: 220px;
+            height: 220px;
+        }
+        & .aboutT{
+            font-size: 30px;
+            gap: 10px;
+        }
+    }
+}
+
+@media screen and (1500px <= width < 2000px) {
+    .aboutBrand{
+        & .aboutBrandImage{
+            height: 50vh;
+        }
+        & .aboutBrandText{
+        & h4{
+            font-size: 38px;
+        }
+        & p{
+            font-size: 20px;
+        }
+        }   
+    }
+    
+    .aboutMission{
+        & .aboutMissionText{
+            & h4{
+                font-size: 38px;
+            }
+            & span{
+                & p{
+                    font-size: 28px;
+                }
+            }
+        }
+        & .aboutMissionImage{
+            width: 45%;
+        }
+    }
+    
+    .aboutValue{
+        & .aboutValueText{
+            & h4{
+                font-size: 38px;
+            }
+            & span{
+                & p{
+                    font-size: 28px;
+                }
+            }
+        }
+        & .aboutValueImage{
+            height: 33vh;
+        }
+    }
+    .aboutTeam{
+        font-size: 38px;
+    }
+    .aboutTeamImage{
+        & .aboutTeamImageContainer{
+            width: 330px;
+            height: 330px;
+        }
+        & .aboutT{
+            font-size: 33px;
+            gap: 10px;
+        }
+    }
+}
+
+@media screen and (width >= 2000px) {
+    .aboutBrand{
+        & .aboutBrandImage{
+            height: 50vh;
+        }
+        & .aboutBrandText{
+        & h4{
+            font-size: 55px;
+        }
+        & p{
+            font-size: 40px;
+        }
+        }   
+    }
+    
+    .aboutMission{
+        & .aboutMissionText{
+            & h4{
+                font-size: 55px;
+            }
+            & span{
+                & p{
+                    font-size: 45px;
+                }
+            }
+        }
+        & .aboutMissionImage{
+            width: 45%;
+        }
+    }
+    
+    .aboutValue{
+        & .aboutValueText{
+            & h4{
+                font-size: 55px;
+            }
+            & span{
+                & p{
+                    font-size: 45px;
+                }
+            }
+        }
+        & .aboutValueImage{
+            height: 33vh;
+        }
+    }
+    .aboutTeam{
+        font-size: 55px;
+    }
+    .aboutTeamImage{
+        & .aboutTeamImageContainer{
+            width: 440px;
+            height: 440px;
+        }
+        & .aboutT{
+            font-size: 45px;
+            gap: 15px;
+        }
+    }
+}
+
+
+
+
+
+
+@media screen and (width < 720px) {
+    .aboutBrand{
+        flex-direction: column;
+        gap:15px;
+
+        & .aboutBrandImage{
+            width: 100%;
+            height: 50vh;
+            order: 2;
+        }
+        & .aboutBrandText{
+            width: 100%;
+            order: 1;
+        & h4{
+            font-size: 21px;
+            justify-content: flex-start;
+        }
+        & p{
+            font-size: 16px;
+        }
+        }   
+    }
+    
+    .aboutMission{
+        flex-direction: column;
+        gap:15px;
+        & .aboutMissionText{
+            width: 100%;
+            & h4{
+                font-size: 21px;
+            }
+            & span{
+                & p{
+                    font-size: 16px;
+                }
+            }
+        }
+        & .aboutMissionImage{
+            width: 100%;
+        }
+    }
+    
+    .aboutValue{
+        flex-direction: column;
+        gap:15px;
+        & .aboutValueText{
+            width: 100%;
+            order:1;
+            & h4{
+                font-size: 21px;
+            }
+            & span{
+                & p{
+                    font-size: 16px;
+                }
+            }
+        }
+        & .aboutValueImage{
+            order: 2;
+            height: 50vh;
+            width: 100%;
+        }
+    }
+    .aboutTeam{
+        font-size: 21px;
+        
+    }
+    .aboutTeamImage{
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        gap:70px;
+       
+        & .aboutTeamImageContainer{
+            width: 280px;
+            height: 280px;
+        }
+        & .aboutT{
+            font-size: 20px;
+            gap: 5px;
+        }
+    }
 }
