started consuming API

--- a/src/components/Auth/ForgotPassword.css
+++ b/src/components/Auth/ForgotPassword.css
@@ -46,7 +46,7 @@
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
 }
-.AlreadyForgot{
+.AlreadyForgots{
     height: 10%;
     width: 100%;
     /* background: purple; */
@@ -72,16 +72,14 @@
 .MainForgotForm{
     height: 73%;
     width: 100%;
-    /* background: green; */
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 10px;
     padding-left: 75px;
 }
-.MainForgotFormText{
-    height: 18%;
+.MainForgotFormTexts{
+    height: max-content;
     width: 100%;
-    /* background: yellow; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -95,12 +93,41 @@
         font-size: 17px;
     }
 }
+.MainForgotFormTextSuccess{
+    height: 100%;
+    /* background: red; */
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    & h2{
+        font-size: 30px;
+    }
+    & p{
+        font-size: 19px;
+    }
+    @media screen and (max-width: 768px) {
+    justify-content: flex-start;
+    align-items: center;
+
+    & h2{
+        font-size: 23px;
+        color: #292626;
+    }
+    
+    & p{
+        font-size: 18px;
+        text-align: center;
+    }
+    }
+    
+}
 .MainForgotFormInputAndButton{
     height: 40%;
     width: 75%;
-    /* background: oldlace;  */
     display: flex;
     flex-direction: column;
+    padding-left: 5px;
+    padding-right: 5px;
     gap: 40px;
 
     & input{
@@ -111,14 +138,15 @@
         font-size: 17px;
         border-radius: 8px;
         padding-inline-start: 10px;
+        outline: none;
     }
 }
-.HoldButton{
+.HoldButtonForgot{
     height: 35%;
     width: 100%;
-    /* background: #000; */
     display: flex;
     justify-content: flex-end;
+    padding: 0;
 
     & button{
         height: 100%;
@@ -130,5 +158,70 @@
         border: none;
         border-radius: 8px;
         cursor: pointer;
+    }
+}
+@media screen and (max-width: 768px) {
+    .ForgotPasswordHolder{
+        flex-direction: column;
+        /* background: #000; */
+        padding-bottom: 110px;
+        gap: 10px;
+
+    }
+    .AuthSide{
+        height: 40%;
+        width: 100%;
+        /* background: red; */
+        justify-content: space-between;
+    }
+    .LogoAuth{
+        height: 70px;
+        width: 70px;
+        display: flex;
+        align-self: flex-start;
+    }
+    .AuthSideText{
+        height: 25%;
+        /* background: blue; */
+    }
+    .FormArea{
+        width: 100%;
+        height: 68%;
+        background: transparent;
+        /* background: green; */
+        flex-direction: column-reverse;
+        /* padding-bottom: 40px; */
+        justify-content: flex-end;
+        gap: 10px;
+        /* background: yellow; */
+    }
+    .AlreadyForgots{
+        justify-content: center;
+        justify-content: flex-end;
+        align-items: flex-end;
+    }
+    .MainForgotForm{
+        padding: 0;
+        align-items: center
+    }
+    .MainForgotFormTexts{
+        display: none;
+    }
+    .MainForgotFormInputAndButton{
+        height: 100%;
+        width: 100%;
+        gap: 15px;
+    }
+
+    .HoldButtonForgot{
+        height: 25%;
+        justify-content: flex-end;
+        padding: 0;
+
+        & button{
+        width: max-content;
+        padding-left: 15px;
+        padding-right: 15px;
+        }
     }
 }
