--- a/src/components/Auth/ResetPassword.css
+++ b/src/components/Auth/ResetPassword.css
@@ -75,7 +75,7 @@
     /* background: green;   */
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 8px;
     padding-left: 75px;
 }
 .MainForgotFormText{
@@ -98,22 +98,21 @@
 .MainResetFormInputAndButton{
     height: 60%;
     width: 75%;
-    /* background: oldlace;  */
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 20px;
+
 
 }
 .HoldInput{
-    height: 70%;
+    height: 40%;
     width: 100%;
-    /* background: red; */
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    justify-content: center;
 
     & input{
-        height: 47%;
+        height: 70%;
         width: 100%;
         background: transparent;
         font-family: var(--generalFontFamily--);
@@ -123,15 +122,18 @@
     }
 }
 .HoldButton{
-    height: 30%;
+    height: 22%;
     width: 100%;
-    /* background: #000; */
     display: flex;
     justify-content: flex-end;
 
     & button{
-        height: 100%;
-        width: 30%;
+        width: max-content;
+        padding: 10px;
+        padding-top: 5px;
+        padding-top: 5px;
+        padding-left: 20px;
+        padding-right: 20px;
         font-family: var(--generalFontFamily--);
         font-size: 18.5px;
         background: #3FB480;
@@ -142,7 +144,7 @@
     }
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 768px) {
     .ForgotPasswordHolder{
         flex-direction: column;
         /* background: #000; */
@@ -190,18 +192,23 @@
     .MainResetFormInputAndButton{
         height: 100%;
         width: 100%;
+        gap: 15px;
     }
     .HoldInput{
-        height: 62%;
-        padding-left: 10px;
-        padding-right: 10px;
+        height: 46%;
+        padding-left: 15px;
+        padding-right: 15px;
+
     }
     .HoldButton{
-        height: 24%;
-        justify-content: center;
+        height: 25%;
+        justify-content: flex-end;
+        padding-right:10px ;
 
         & button{
-        width: 50%;
+        width: max-content;
+        padding-left: 15px;
+        padding-right: 15px;
         }
     }
 }
