--- a/src/components/DetailsPage/TherapistDetails.css
+++ b/src/components/DetailsPage/TherapistDetails.css
@@ -104,9 +104,8 @@
     justify-content: space-between;
 }
 .Inperson{
-    height: 45%;
+    height: 100%;
     width: 100%;
-    /* background: rebeccapurple; */
     display: flex;
     justify-content: space-between;
 }
@@ -116,11 +115,13 @@
     /* background: red; */
     display: flex;
     flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
     gap: 4px;
 
     & h3{
         font-family: var(--generalFontFamily--);
-        font-size: 16px;
+        font-size: 23px;
         font-weight: 600;
     }
 }
@@ -132,6 +133,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: center;
+    align-items: center;
     
     & button{
         height: 35px;
