--- a/src/components/BeforeLogin/Home/Home.css
+++ b/src/components/BeforeLogin/Home/Home.css
@@ -363,6 +363,7 @@
     border-radius: 15px;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 }
 .OurClients{
     height: 55vh;
