--- a/src/components/DetailsPage/AvailableSessions.css
+++ b/src/components/DetailsPage/AvailableSessions.css
@@ -9,6 +9,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    @media screen and (max-width:768px) {
+        width: 100%;
+    }
 }
 .AvailableSide{
     height: 90%;
@@ -33,7 +37,9 @@
 
     & button{
         height: 37px;
-        width: 22%;
+        width: max-content;
+        padding-left: 10px;
+        padding-right: 10px;
         border: none;
         color: white;
         border-radius: 8px;
