--- a/src/components/DetailsPage/TherapistDetails.css
+++ b/src/components/DetailsPage/TherapistDetails.css
@@ -29,6 +29,8 @@
         height: 100%;
         width: 100%;
         border-radius: 50%;
+        object-position: center;
+        aspect-ratio: 3/3;
     }
 }
 .TherapistDetailsName{
