--- a/src/components/BeforeLogin/Header/Navbar.css
+++ b/src/components/BeforeLogin/Header/Navbar.css
@@ -79,7 +79,7 @@
     }
 
     & button{
-        height: 28%;
+        height: 46px;
         width: 100%;
         background: #3FB480;
         border: none;
