--- a/src/components/DetailsPage/AvailableSessions.css
+++ b/src/components/DetailsPage/AvailableSessions.css
@@ -73,6 +73,32 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    
+    & ul{
+        display: flex;
+        flex-direction: column;
+        gap: 3px;
+        & li{
+            font-family: var(--generalFontFamily--);
+            font-size: 16px;
+        }
+    }
+
+    @media screen and (max-width:450px) {
+        & ul{
+            & li {
+                font-size: 11px;
+            }
+        }
+    }
+}
+.AvailableProceed{
+    & h4{
+        @media screen and (max-width:450px) {
+            font-size: 13px;    
+            
+        }
+    }
 }
 .HoldSelectedAppointmentTherapist{
     height:30%;
@@ -109,6 +135,7 @@
         outline: none;
         border: 1px solid black;
         border-radius: 6px;
+        cursor: pointer;
     }
 }
 .HoldAppointmentsTime{
