--- a/src/components/BeforeLogin/Header/Navbar.css
+++ b/src/components/BeforeLogin/Header/Navbar.css
@@ -4,6 +4,10 @@
     background: white;
     padding-left: 10px;   
     z-index: 9999; 
+    position: sticky;
+    top: 0;
+    bottom: 0;
+    z-index: 999999;
     padding-right: 10px;    
     animation: slideInRight;
     animation-duration: 1.5s; 
