--- a/src/components/BeforeLogin/Footer/Footer.css
+++ b/src/components/BeforeLogin/Footer/Footer.css
@@ -148,7 +148,7 @@
         font-weight: 400;
     }
 }
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 740px) {
     .MainFooterThings{
         height: max-content;
         /* background: #000; */
@@ -250,6 +250,33 @@
     .GetInTouch{
         & h3{
             font-size: 18px;
+        }
+    }
+}
+@media screen and (min-width:1750px) and (max-width:3200px)  {
+    .AboutSection{
+        & h3{
+            font-size: 40px;
+        }
+        & h2{
+            font-size: 42px;
+        }
+    }
+    .PrivacySection{
+        & h3{
+            font-size: 40px;
+        }
+        & h2{
+            font-size: 42px;
+        }
+    }
+    .GetInTouch{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        & h3{
+            font-size: 42px;
         }
     }
 }
