--- a/src/components/BeforeLogin/Home/Contact.css
+++ b/src/components/BeforeLogin/Home/Contact.css
@@ -122,3 +122,29 @@
         }
     }
 }
+@media screen and (min-width:1750px) and (max-width:4200px) {
+    
+    .ContactHeader{
+        & h2{
+            font-size: 60px;
+        }
+        & p{
+            font-size: 50px;
+        }
+    }
+    .HoldContactInput{
+        & input{
+            font-size: 40px;
+        }
+    }
+    .HoldContactTextArea{
+        & textarea{
+            font-size: 40px;
+        }
+    }
+    .HoldContactButton{
+        & button{
+            font-size: 55px;
+        }
+    }
+}
