--- a/src/components/Auth/Login.css
+++ b/src/components/Auth/Login.css
@@ -100,6 +100,7 @@
                 font-size: 25px;
                 display: flex;
                 align-items: center;
+                cursor: pointer;
             }
         }
     }
@@ -127,6 +128,7 @@
         font-weight: bold;
         border-radius: 5px;
         margin-left: 68%;
+        cursor: pointer;
     }
 
     & .bottomWriteUp{
